<resources>
    <string name="app_name">Coffee Society</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_item_informacion">Información</string>
    <string name="menu_item_ordenar">Ordenar</string>
    <string name="menu_item_ordenes">Ordenes</string>
    <string name="menu_item_perfil">Perfil</string>
    <string name="menu_item_contactenos">Contáctenos</string>
    <string name="menu_item_configuracion">Configuración</string>
    <string name="nav_header_nombre">Coffee Society</string>
    <string name="nav_header_slogan">Slogan</string>
    <string name="menu_item_inicio">Inicio</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_informacion">Información</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_ordenar">Ordenar</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="title_activity_contactenos">Contáctenos</string>
    <string name="title_activity_configuracion">Configuración</string>

</resources>
