<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_inicio"
            android:checked="true"
            android:icon="@drawable/ic_menu_inicio"
            android:title="@string/menu_item_inicio" />
        <item
            android:id="@+id/nav_informacion"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/menu_item_informacion" />
        <item
            android:id="@+id/nav_ordenar"
            android:icon="@drawable/ic_menu_ordenar"
            android:title="@string/menu_item_ordenar" />
        <item
            android:id="@+id/nav_ordenes"
            android:icon="@drawable/ic_menu_ordenes"
            android:title="@string/menu_item_ordenes" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_perfil"
            android:title="@string/menu_item_perfil" />
        <item
            android:id="@+id/nav_contactenos"
            android:icon="@drawable/ic_menu_contactenos"
            android:title="@string/menu_item_contactenos" />
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/ic_menu_configuracion"
            android:title="@string/menu_item_configuracion" />
    </group>

</menu>
